# cros-rime

./: .gitmodules  README.md
input-tools/: package.json  webpack.config.js
input-tools/assets/manifest/: chromeos-ui.json
input-tools/src/: main.ts
input-tools/src/api/common/: port.ts
input-tools/src/api/extension/: storage.ts
input-tools/src/model/: model.ts
input-tools/src/pages/: option.ts
rime-wasm/: .gitignore  CMakeLists.txt  Makefile  README.md
rime-wasm/scripts/: build_lib.sh  build_wasm.sh
rime-wasm/src/: decoder.cc
rime-wasm/worker/: .gitignore  package.json  rollup.config.mjs  tsconfig.json
rime-wasm/worker/src/: imehandler.ts  main.ts
